# ScreenSharing-UDP-FFMpeg

./: .gitignore  ARCHITECTURE_DIAGRAM.md  BUNDLE_FFMPEG_GUIDE.md  BUNDLE_FFMPEG_SIMPLE.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  QUICK_START_MACOS.md  README.md  README_MACOS.md  RELEASE_GUIDE.md  SYSTEM_DESIGN.md  download_ffmpeg.ps1  download_ffmpeg.sh  ffmpeg_commands.md  package-lock.json  package.json  student_pseudocode.rs  teacher_pseudocode.rs
.github/: FUNDING.yml
.github/workflows/: build-test.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/: .gitkeep
src-tauri/resources/windows/: .gitkeep
src-tauri/src/: lib.rs  main.rs  screen_capture.rs  streaming.rs
